// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Render check 1`] = `
<DocumentFragment>
  <header
    class="css-1wud3ui"
  />
</DocumentFragment>
`;

exports[`Logo test cases Render with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-1pd6mft"
    size="10"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
